--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
+          TF_VAR_sonarqube_db_name: ${{ secrets.SONARQUBE_DB_NAME }}
+          TF_VAR_sonarqube_db_username: ${{ secrets.SONARQUBE_DB_USERNAME }}
+          TF_VAR_sonarqube_db_password: ${{ secrets.SONARQUBE_DB_PASSWORD }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
